# igen

./: .gitmodules  LICENSE  LOG.md  README.md
modules/igen/: .gitignore  Cargo.toml
modules/igen/src/: main.rs
modules/mgen/: .pib  Cargo.toml  test.bash
modules/mgen/example/: foo1.rs
modules/mgen/src/: main.rs
modules/mgen/src/schema/: codegen.rs  init.rs  mod.rs  scan.rs
